force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Release__c/agf__ADM_Team_Release__c.object-meta.xml
<CustomObject>
    <description>Keep track of which teams are part of a release.</description>
    <label>Team Release</label>
    <nameField>
        <displayFormat>RT-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Releases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>