force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Release__c/fields/agf__Release_Goals__c.field-meta.xml
<CustomField>
    <fullName>agf__Release_Goals__c</fullName>
    <label>Release Goals</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>