force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Release__c/validationRules/agf__Build_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Build_cannot_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>LEN(  agf__Build__c  ) = 0</errorConditionFormula>
    <errorDisplayField>agf__Build__c</errorDisplayField>
    <errorMessage>You must select a Build.</errorMessage>
</ValidationRule>