force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Release__c/validationRules/agf__Scrum_Team_Is_Active.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Scrum_Team_Is_Active</fullName>
    <active>true</active>
    <errorConditionFormula>agf__Scrum_Team__r.agf__Active__c = false</errorConditionFormula>
    <errorMessage>The scrum team you selected is not active.</errorMessage>
</ValidationRule>