force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Release__c/validationRules/agf__Team_cannot_be_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>agf__Team_cannot_be_empty</fullName>
    <active>true</active>
    <errorConditionFormula>LEN( agf__Scrum_Team__c ) = 0</errorConditionFormula>
    <errorDisplayField>agf__Scrum_Team__c</errorDisplayField>
    <errorMessage>You must select a Scrum Team.</errorMessage>
</ValidationRule>