force-app/main/default/_fdtlt82/Flex-Sandbox/objects/agf__ADM_Team_Release__c/listViews/agf__All_160_Team_Releases.listView-meta.xml
<ListView>
    <fullName>agf__All_160_Team_Releases</fullName>
    <columns>NAME</columns>
    <columns>agf__Scrum_Team__c</columns>
    <filterScope>Everything</filterScope>
    <label>All 160 Team Releases</label>
</ListView>